[tool.poetry]
name = "test-task-insiders-fastapi"
version = "0.1.0"
description = ""
authors = ["DaTrEvTeR <rozhkovm176@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"



[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
