[tool.poetry]
name = "auction-drive-bot"
version = "0.1.0"
description = ""
authors = ["DaTrEvTeR <rozhkovm176@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.20.0.post0"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"



[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
